fix single img updad z-index层级过高问题

--- a/packages/assui/src/single-img-upload/style/index.less
+++ b/packages/assui/src/single-img-upload/style/index.less
@@ -35,7 +35,7 @@
 
   &-content {
     position: relative;
-    z-index: 1010;
+    z-index: 10;
     width: 100%;
     height: 100%;
     overflow: hidden;
